--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,8 @@
+ <!-- 
+Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
+SPDX-License-Identifier: MIT-0 
+-->
+
 <!DOCTYPE html>
 <html lang="">
   <head>
